--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,9 @@
-<form action="{{ url_for('user') }}" method="post">
+<!-- <form action="{{ url_for('user') }}" method="post">
   <input type="text" name="name" placeholder="Name..."/>
   <input type="text" name="email" placeholder="Email..."/>
   <button type="submit">Save</button>
 </form>
 {% for u in users %}
   <p>{{ u.name }} -- {{ u.email }}</p>
-{% endfor %}
+{% endfor %} -->
+<h1>Hello</h1>
