--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Geolocation</title>
+    <title>Lightning Check In!</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
@@ -12,7 +12,7 @@
         padding: 0;
       }
 */
-      #checkIn {
+      .center_stuff {
         margin: 0 auto;
         margin-top: 20%;
         width: 20%;
@@ -21,7 +21,10 @@
     </style>
   </head>
   <body>
-    <div id="checkIn"></div>
+  	<div class="center_stuff">
+	    <div id="checkIn">Not Set</div>
+	    <input type="button" onclick="send_loc" value="Submit Location"></input>
+	</div>
     <script>
       // Note: This example requires that you consent to location sharing when
       // prompted by your browser. If you see the error "The Geolocation service
@@ -64,6 +67,11 @@
       }
 
       findSelf();
+
+      function sendLocation() {
+      	var loc = document.getElementById('checkIn').textContent;
+      }
+      
 
     </script>
     <script async defer
