adding database post

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,6 +70,7 @@
 
       function sendLocation() {
       	var loc = document.getElementById('checkIn').textContent;
+      	alert(loc)
       }
       
 
