bugtesting db post

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
   <body>
   	<div class="center_stuff">
 	    <div id="checkIn">Not Set</div>
-	    <input type="button" onclick="send_loc" value="Submit Location"></input>
+	    <input type="button" onclick="sendLocation" value="Submit Location" />
 	</div>
     <script>
       // Note: This example requires that you consent to location sharing when
