bugtesting Put vs Post

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,11 @@
         text-align: center;
       }
     </style>
-  </head>
+</head>
   <body>
   	<div class="center_stuff">
 	    <div id="checkIn">Not Set</div>
-	    <input type="button" onclick="sendLocation" value="Submit Location" />
+	    <input type="button" onclick="sendLocation" value="Submit Location"></input>
 	</div>
     <script>
       // Note: This example requires that you consent to location sharing when
@@ -70,7 +70,7 @@
 
       function sendLocation() {
       	var loc = document.getElementById('checkIn').textContent;
-      	alert(loc)
+      	alert(loc);
       }
       
 
