--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
 
   function sendLocation() {
   	var loc = document.getElementById('checkIn').textContent;
-  	alert(loc);
+  	// alert(loc);
   }
   
 
