still debugging post

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
     alert(browserHasGeolocation);
   }
 
-  findSelf();
+  // findSelf();
 
   // function sendLocation() {
   // 	var loc = document.getElementById('checkIn').textContent;
