still debugging post

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 </style>
 <div class="center_stuff">
     <div id="checkIn">Not Set</div>
-    <input type="button" onclick="findSelf" value="Submit Location" />
+    <input type="button" onclick="findSelf()" value="Submit Location" />
 </div>
 <script>
   // Note: This example requires that you consent to location sharing when
