--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,8 @@
   }
 </style>
 <div class="center_stuff">
-    <div id="checkIn">Not Set</div>
-    <input type="button" onclick="findSelf()" value="Submit Location" />
+    <div id="checkIn">Not Found</div>
+    <input type="button" onclick="findSelf()" value="Find Location" />
 </div>
 <script>
   // Note: This example requires that you consent to location sharing when
