checking to see if commits are being deployed

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
   }
 </style>
 <div class="center_stuff">
-    <div id="checkIn">Not Found</div>
+    <div id="checkIn">Not Set</div>
     <input type="button" onclick="findSelf()" value="Find Location" />
 </div>
 <script>
