Location properly submitted

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,7 @@
 			    contentType: 'application/json;charset=UTF-8',
 			    success: function(result) {
 			        document.getElementById("checkIn").innerText = "Sent " + loc;
+			        console.log("Sent!")
 			    }
 			});
           }
