--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 	</div>
 	<a href="#" onclick="signOut();">Sign out</a>
     <div id="checkIn">Not Set</div>
-    <a href="#" onclick="findSelf();">Click to Find & Send Location!</a>
+    <input type="button" onclick="findSelf()" value="Find Location" />
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
@@ -43,6 +43,7 @@
   	var prof_id = null;
 
 	function findSelf() {
+		event.stopDefault();
 		if (prof_id != null) {
 			if (navigator.geolocation) {
 				navigator.geolocation.getCurrentPosition(function(position) {
