--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,7 @@
 	<a href="#" onclick="signOut();">Sign out</a>
     <div id="checkIn">Not Set</div>
     <input type="button" onclick="findSelf()" value="Find Location" />
+	<a href="#" onclick="findSelf();">Test Element Don't Click!</a>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
