--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,6 @@
 	<a href="#" onclick="signOut();">Sign out</a>
     <div id="checkIn">Not Set</div>
     <input type="button" onclick="findSelf()" value="Find Location" />
-	<a href="#" onclick="findSelf();">Test Element Don't Click!</a>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
@@ -44,7 +43,6 @@
   	var prof_id = null;
 
 	function findSelf() {
-		event.preventDefault();
 		if (prof_id != null) {
 			if (navigator.geolocation) {
 				navigator.geolocation.getCurrentPosition(function(position) {
@@ -59,35 +57,37 @@
 				    var xhr = new XMLHttpRequest();
 				    xhr.open('GET', "https://maps.googleapis.com/maps/api/geocode/json?latlng=" + pos.lat + "," + pos.lng + "&key=AIzaSyBljiCLSI42QdZibI2_ykXHHLsP3e5oE74", true);
 				    xhr.send();
+
+				    console.log("test");
 				     
-				    xhr.onreadystatechange = processRequest;
+				  //   xhr.onreadystatechange = processRequest;
 				     
-				    function processRequest(e) {
-				      if (xhr.status == 200) {
-				        var response = JSON.parse(xhr.responseText);
-				        var loc = response["results"][0]["formatted_address"];
-				        document.getElementById('checkIn').innerText = loc;
+				  //   function processRequest(e) {
+				  //     if (xhr.status == 200) {
+				  //       var response = JSON.parse(xhr.responseText);
+				  //       var loc = response["results"][0]["formatted_address"];
+				  //       document.getElementById('checkIn').innerText = loc;
 		
-				        data = {
-				        	'location': loc,
-				        	'idtoken': prof_id
-				        }
+				  //       data = {
+				  //       	'location': loc,
+				  //       	'idtoken': prof_id
+				  //       }
 		
-				        $.ajax({
-						    type : "POST",
-						    url : "../checkin",
-						    data: JSON.stringify(data, null, '\t'),
-						    contentType: 'application/json;charset=UTF-8',
-						    success: function(result) {
-						        document.getElementById("checkIn").innerText = "Sent " + loc;
-						        console.log("Sent!");
-						    },
-						    complete: function(response) {
-						    	console.log(response.responseText);
-						    }
-						});
-				      }
-				    }
+				  //       $.ajax({
+						//     type : "POST",
+						//     url : "../checkin",
+						//     data: JSON.stringify(data, null, '\t'),
+						//     contentType: 'application/json;charset=UTF-8',
+						//     success: function(result) {
+						//         document.getElementById("checkIn").innerText = "Sent " + loc;
+						//         console.log("Sent!");
+						//     },
+						//     complete: function(response) {
+						//     	console.log(response.responseText);
+						//     }
+						// });
+				  //     }
+				  //   }
 				}, function() {
 				    handleLocationError(true);
 				});
