actually still debugging the double submit

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
 					        var loc = response["results"][0]["formatted_address"];
 					        document.getElementById('checkIn').innerText = loc;
 			
-					        data = {
+					        var data = {
 					        	'location': loc,
 					        	'idtoken': prof_id
 					        };
