actually still debugging the double submit

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,10 +66,10 @@
 					        var loc = response["results"][0]["formatted_address"];
 					        document.getElementById('checkIn').innerText = loc;
 			
-					        var data = {
-					        	'location': loc,
-					        	'idtoken': prof_id
-					        };
+					        // var data = {
+					        // 	'location': loc,
+					        // 	'idtoken': prof_id
+					        // };
 			
 					  //       $.ajax({
 							//     type : "POST",
