actually still debugging the double submit

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
 
 				     
 				    function processRequest(e) {
-				    	console.log("inside");
+				    	console.log(xhr.status);
 				    	if (xhr.status == 200) {
 					        // var response = JSON.parse(xhr.responseText);
 					        // var loc = response["results"][0]["formatted_address"];
