including berkeley email check and response when not signed in

--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
 			  handleLocationError(false);
 			}
 		} else {
-			alert("Please Sign-In with your Berkeley Email");
+			alert("Please Sign-In with your Berkeley Account!");
 		}
 	}
 
