--- a/templates/index.html
+++ b/templates/index.html
@@ -21,15 +21,19 @@
   }
 
 </style>
-<div class="g-signin2" data-onsuccess="onSignIn"></div>
 <div class="center_stuff">
 	<div id="info" class="hidden_div">
 		<div id="name"></div>
 		<div id="email"></div>
 	</div>
-	<a href="#" onclick="signOut();">Sign out</a>
+	<div class="g-signin2" data-onsuccess="onSignIn"></div>
+	<div class="abcRioButton abcRioButtonLightBlue" style="height:36px;width:120px;">
+		<a href="#" onclick="signOut();" class="abcRioButtonContentWrapper">Sign out</a>
+	</div>
     <div id="checkIn">Not Set</div>
-    <input type="button" onclick="findSelf()" value="Find Location" />
+    <div class="abcRioButton abcRioButtonLightBlue" style="height:36px;width:120px;">
+    	<input type="button" onclick="findSelf()" value="Find Location" class="abcRioButtonContentWrapper">
+	</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
