--- a/templates/all_entries.html
+++ b/templates/all_entries.html
@@ -3,7 +3,6 @@
   .center_stuff {
     margin: 0 auto;
     margin-top: 20%;
-    width: 50%;
     text-align: center;
   }
 
@@ -19,6 +18,6 @@
 </style>
 <div class="center_stuff">
   {% for u in checkins %}
-  <p class="element">{{ u.name }} | {{ u.email }} | {{ u.location }}</p>
+  <p class="element">{{ u.id }} | {{ u.name }} | {{ u.email }} | {{ u.location }}</p>
   {% endfor %}
 </div>
