displaying just time

--- a/templates/all_entries.html
+++ b/templates/all_entries.html
@@ -27,7 +27,7 @@
     <td>{{ u.name }}</td>
     <td>{{ u.email }}</td>
     <td>{{ u.location }}</td>
-    <td>{{ u.time }}</td>
+    <td>{{ u.time.time() }}</td>
   </tr>
   {% endfor %}
 </table>
