added route for weekly checkins

--- a/templates/all_entries.html
+++ b/templates/all_entries.html
@@ -17,7 +17,7 @@
 
   td {
     padding: 5px;
-    border-right: 1px;
+    border-right: 1px darkgray solid;
     font-family: Arial, Helvetica, sans-serif;
   }
 
