--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -22,6 +22,13 @@
   }
 
 </style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<meta name="google-signin-client_id" content="22643870492-3k4q6eqkdunpp447em29su6e7b7te235.apps.googleusercontent.com">
+<div class="g-signin2" data-onsuccess="onSignIn"></div>
+<div class="element abcRioButton abcRioButtonLightBlue" style="height:36px;width:120px;">
+    <span href="#" style="font-size:13px;line-height:34px;" onclick="signOut();" class="abcRioButtonContentWrapper">Sign out</span>
+</div>
 <h2 class="center_stuff">Here</h2>
 <table class="center_stuff">
   {% for u in here %}
@@ -40,3 +47,28 @@
   </tr>
   {% endfor %}
 </table>
+<script>
+  var prof_id = null;
+  var email_temp = false;
+
+  function onSignIn(googleUser) {
+    var profile = googleUser.getBasicProfile();
+    console.log(profile.getEmail());
+    prof_id = googleUser.getAuthResponse().id_token;
+    if (profile.getEmail().endsWith("@berkeley.edu")) {
+      email_temp = true;
+    }
+  }
+
+  function signOut() {
+    var auth2 = gapi.auth2.getAuthInstance();
+    auth2.signOut().then(function () {
+        console.log('User signed out.');
+      prof_id = null;
+      email_temp = false;
+    });
+
+  }
+
+</script>
+
