adding in mark here func

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
 	</div>
     <div class="element" id="checkIn">Not Set</div>
     <div class="element abcRioButton abcRioButtonLightBlue" style="height:36px;width:120px;">
-    	<span onclick="findSelf()" value="Find Location" class="abcRioButtonContentWrapper" style="font-size:13px;line-height:34px;">Find Location</span>
+    	<span onclick="findSelf()" class="abcRioButtonContentWrapper" style="font-size:13px;line-height:34px;">Find Location</span>
 	</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
