--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -26,7 +26,7 @@
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <meta name="google-signin-client_id" content="22643870492-3k4q6eqkdunpp447em29su6e7b7te235.apps.googleusercontent.com">
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
-<div class="element abcRioButton abcRioButtonLightBlue" style="height:36px;width:120px;">
+<div class="element abcRioButton abcRioButtonLightBlue" style="height:36px;width:120px;" onclick="signOut();">
     <span href="#" style="font-size:13px;line-height:34px;" onclick="signOut();" class="abcRioButtonContentWrapper">Sign out</span>
 </div>
 <h2 class="center_stuff">Here</h2>
@@ -44,6 +44,7 @@
   <tr>
     <td>{{ u[1] }}</td>
     <td>{{ u[2] }}</td>
+    <td><a href="#" onclick="here({{ u[2] }});">Mark as Here</a></td>
   </tr>
   {% endfor %}
 </table>
@@ -51,11 +52,18 @@
   var prof_id = null;
   var email_temp = false;
 
+  var admin = [
+    "jdong@berkeley.edu",
+    "surinagulati@berkeley.edu",
+    "s.t@berkeley.edu",
+    "koladyr@berkeley.edu"
+  ];
+
   function onSignIn(googleUser) {
     var profile = googleUser.getBasicProfile();
     console.log(profile.getEmail());
     prof_id = googleUser.getAuthResponse().id_token;
-    if (profile.getEmail().endsWith("@berkeley.edu")) {
+    if (admin.indexOf(profile.getEmail()) >= 0) {
       email_temp = true;
     }
   }
@@ -68,6 +76,32 @@
       email_temp = false;
     });
 
+  }
+
+  function here(email) {
+    if (email_temp) {
+      var data = {
+        'email': email,
+        'week': {{ week }},
+        'idtoken': prof_id
+      }
+
+      $.ajax({
+        type : "POST",
+        url : "../markhere",
+        data: JSON.stringify(data, null, '\t'),
+        contentType: 'application/json;charset=UTF-8',
+        success: function(result) {
+            document.getElementById("checkIn").innerText = "Sent " + email;
+            console.log("Sent!");
+        },
+        complete: function(response) {
+          console.log(response.responseText);
+        }
+      });
+    } else {
+      alert("Only Instructors can mark as Here!");
+    }
   }
 
 </script>
