bugfix from prev commit

--- a/templates/weekly.html
+++ b/templates/weekly.html
@@ -44,7 +44,7 @@
   <tr>
     <td>{{ u[1] }}</td>
     <td>{{ u[2] }}</td>
-    <td><a href="#" onclick="here({{ u[2] }});">Mark as Here</a></td>
+    <td><a href="#" onclick="here('{{ u[2] }}');">Mark as Here</a></td>
   </tr>
   {% endfor %}
 </table>
